--- a/src/App.css
+++ b/src/App.css
@@ -69,3 +69,53 @@ button{
   cursor: pointer;
 }
 
+.light input{
+  background-color: black;
+  color:whitesmoke ;
+}
+
+input{
+  padding: 5px;
+}
+
+.dark input{
+  background-color: white;
+  color: black;
+}
+
+.Name{
+  transform: translateY(-200px);
+  margin-right: 100px;
+  border-radius: 5px ; 
+  height: 30px;
+}
+
+.plus-button{
+  margin-top: -205px;
+  position: relative;
+  background-color: slategrey;
+  height:40px;
+  border-radius: 20px;
+  padding-left: 12px;
+  width: 40px;
+  right: 100px;
+  scale: 1.2;
+  transition: 300ms ease-in-out;
+}
+
+
+.plus-button:hover{
+  scale: 0.9;
+}
+
+.descirption{
+  border-radius: 5px ;
+  margin-right:200px ;
+  transform: translateY(-200px);
+  margin-left: 100px;
+  width: 300px;
+  color: black;
+  font-family:monospace;
+  font-size: larger;
+  height: 30px;
+}
